[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "passabot-utils"
version = "0.1.0"
description = "Funções auxiliares para agentes PassaBot"
readme = "README.md"
authors = [
    {name = "PassaBot", email = "fernando.santos@passabot.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/passabot/passabot-utils"
Repository = "https://github.com/passabot/passabot-utils"

